--- a/index.html
+++ b/index.html
@@ -1457,6 +1457,11 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .choice-pill input { display:none; }
 .choice-pill .pill-visual { display:flex; align-items:center; justify-content:center; width: 38px; height: 38px; }
 .choice-pills[data-label="Мобильная обложка"] .pill-label { display: none; }
+.choice-pills[data-label="Мобильная обложка"] { gap: 14px; }
+.choice-pills[data-label="Мобильная обложка"] .choice-pill { position: relative; padding: 14px; min-width: 90px; justify-content: center; gap: 0; }
+.choice-pills[data-label="Мобильная обложка"] .pill-visual { width: 52px; height: 52px; }
+.choice-pills[data-label="Мобильная обложка"] .cover-icon { width: 44px; height: 44px; border-radius: 14px; }
+.choice-pills[data-label="Мобильная обложка"] .pill-info { position: absolute; top: -12px; right: -12px; width: 26px; height: 26px; margin: 0; border-radius: 50%; background: rgba(20, 20, 20, 0.65); border: 1px solid rgba(255,255,255,0.18); display: inline-flex; align-items: center; justify-content: center; box-shadow: 0 6px 14px rgba(0,0,0,0.5); }
 .pill-label { font-weight: 800; letter-spacing: 0.2px; color: #fff; font-size: 13px; }
 .pill-info { width:16px; height:16px; margin-left: 2px; }
 .cover-icon { width:24px; height:24px; border-radius:8px; display:inline-flex; align-items:center; justify-content:center; position:relative; overflow:hidden; background: rgba(255,255,255,0.06); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08); }
