--- a/index.html
+++ b/index.html
@@ -1450,8 +1450,8 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .count-note { opacity:0.7; font-weight:500; font-size:12px; letter-spacing:0.2px; }
 .muted-construct-note { opacity:0.38; font-weight:400; color: var(--text-sec); font-size:13px; letter-spacing:0.1px; }
 .visually-hidden { position:absolute; width:1px; height:1px; padding:0; margin:-1px; overflow:hidden; clip:rect(0,0,0,0); white-space:nowrap; border:0; }
-.choice-pills { display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
-.choice-pill { display:inline-flex; align-items:center; gap:8px; padding:10px 14px; background: rgba(255,255,255,0.05); border:1px solid rgba(255,255,255,0.08); border-radius: 12px; cursor:pointer; font-weight:700; color:#e5e5e8; transition: .18s ease; user-select:text; min-height: 44px; }
+.choice-pills { display: flex; gap: 8px; flex-wrap: wrap; justify-content: flex-start; }
+.choice-pill { display: flex; align-items: center; padding: 6px 10px; height: auto; min-width: 0; border-radius: 8px; background: rgba(255, 255, 255, 0.05); transition: all 0.2s ease; cursor: pointer; font-weight: 700; color: #e5e5e8; user-select: text; gap: 6px; border: 1px solid rgba(255, 255, 255, 0.08); }
 .choice-pill:hover { background: rgba(255,255,255,0.12); border-color: rgba(255,255,255,0.18); }
 .choice-pill.active { background: rgba(255,51,51,0.14); border-color: rgba(255,51,51,0.45); color:#fff; box-shadow: 0 8px 18px rgba(255,51,51,0.2); }
 .choice-pill input { display:none; }
@@ -1462,9 +1462,9 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .choice-pills[data-label="Мобильная обложка"] .pill-visual { width: 46px; height: 46px; }
 .choice-pills[data-label="Мобильная обложка"] .cover-icon { width: 36px; height: 36px; border-radius: 12px; font-size: 12px; }
 .choice-pills[data-label="Мобильная обложка"] .pill-info { position: absolute; top: -10px; right: -10px; width: 22px; height: 22px; margin: 0; border-radius: 50%; background: rgba(20, 20, 20, 0.65); border: 1px solid rgba(255,255,255,0.18); display: inline-flex; align-items: center; justify-content: center; box-shadow: 0 6px 14px rgba(0,0,0,0.5); }
-.pill-label { font-weight: 800; letter-spacing: 0.2px; color: #fff; font-size: 13px; }
-.pill-info { width:16px; height:16px; margin-left: 2px; }
-.cover-icon { width:24px; height:24px; border-radius:8px; display:inline-flex; align-items:center; justify-content:center; position:relative; overflow:hidden; background: rgba(255,255,255,0.06); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08); }
+.pill-label { font-weight: 800; letter-spacing: 0.2px; color: #fff; font-size: 13px; line-height: 1.2; white-space: nowrap; }
+.pill-info { width:16px; height:16px; margin-left: 4px; font-size: 12px; }
+.cover-icon { width:16px; height:16px; margin-right: 6px; border-radius:8px; display:inline-flex; align-items:center; justify-content:center; position:relative; overflow:hidden; background: rgba(255,255,255,0.06); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.08); }
 .cover-icon::after { content:''; position:absolute; inset:0; opacity:0.08; background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.6), transparent 55%); transition: opacity .2s ease; }
 .cover-icon.static::before { content:'▦'; font-size:14px; color:#fff; opacity:0.8; }
 .cover-icon.animated { background: linear-gradient(120deg, rgba(255,51,51,0.55), rgba(255,140,80,0.65)); box-shadow: inset 0 0 0 1px rgba(255,255,255,0.15), 0 6px 16px rgba(255,68,68,0.25); }
@@ -1483,7 +1483,7 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
 .mobile-cover-state { color: var(--text-main); font-size: 12px; font-weight: 800; letter-spacing: 0.1px; padding-left: 0; line-height: 1.35; margin-top: 0; display: flex; align-items: center; }
 
 /* Контейнер для мобильной обложки */
-.mobile-cover-header { display: flex; align-items: center; gap: 16px; margin-bottom: 12px; }
+.mobile-cover-header { display: flex; flex-direction: column; gap: 10px; width: 100%; }
 .mobile-cover-titles { display: flex; flex-direction: column; gap: 2px; }
 .mobile-cover-title { font-size: 16px; font-weight: 700; color: var(--text-main); }
 .mobile-cover-subtitle { font-size: 13px; color: var(--text-sec); }
@@ -1494,6 +1494,11 @@ h1{font-size:18px;font-weight:700;margin:0;flex:1;text-align:center;color:var(--
     .tariff-feature-item.choice-row { align-items:flex-start; }
     .choice-row { flex-direction:column; align-items:flex-start; }
     .choice-row .choice-pills { width:100%; flex-wrap:wrap; }
+}
+
+@media (max-width: 480px) {
+    .pill-label { font-size: 11px; }
+    .choice-pill { padding: 4px 8px; }
 }
 
 .tariff-summary {
